<resources>
    <string name="app_name">Pet Adoption</string>
    <string name="pet_adoption">Pet Adoption</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo_app">logo app</string>
    <string name="ca_sub">Fill the form for your new account</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="do_you_already_have_an_account">do you already have an account?</string>
    <string name="register_account">Register Account</string>
    <string name="eror_text">Minimum 8 characters</string>
    <string name="confirm_password_eror_text">Password not match</string>
    <string name="input_confirm_password">Input confirm password</string>
    <string name="registration_successful">Registration successful</string>
    <string name="email_is_already_taken">Email is Already Taken</string>
    <string name="fill_the_username">Fill the username</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="minimal_8_character">Minimum 8 characters</string>
    <string name="list_story">List Story</string>
    <string name="username_password_is_incorrect">Username/password is incorrect</string>
    <string name="failed_to_get_camera">Failed to get camera</string>
    <string name="failed_to_get_image">Failed to get Image</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="upload_successful">Upload successful</string>
    <string name="upload_failed">Upload failed</string>
    <string name="choose_from">Choose From</string>
    <string name="take_photo">Take photo</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="add_picture">Add Picture</string>
    <string name="data">Data</string>
    <string name="description">description</string>
    <string name="post">Post</string>
    <string name="no_data_found">No data found</string>
    <string name="uploadedText">%1$s</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="network_error">Network error</string>
    <string name="an_error_occurred_please_try_again_later">An error occurred. Please try again later</string>
    <string name="server_timeout">Server timeout</string>
    <string name="retry">Try again</string>
    <string name="location">Location</string>
    <string name="notification">Notification</string>
</resources>