<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorOnPrimary"
        />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="?attr/colorPrimary"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        android:id="@+id/tv_create_account_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ca_sub"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_create_account"
        app:layout_constraintEnd_toEndOf="@id/tv_create_account"
        app:layout_constraintTop_toBottomOf="@id/tv_create_account"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_username_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_account_sub">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="@id/ti_username_register"
        app:layout_constraintEnd_toEndOf="@id/ti_username_register"
        app:layout_constraintTop_toBottomOf="@id/ti_username_register">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@id/ti_username_register"
        app:layout_constraintEnd_toEndOf="@id/ti_username_register"
        app:layout_constraintTop_toBottomOf="@id/ti_email_register">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_confirm_password_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@id/ti_username_register"
        app:layout_constraintEnd_toEndOf="@id/ti_username_register"
        app:layout_constraintTop_toBottomOf="@id/ti_password_register">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register_account"
        app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
        app:layout_constraintTop_toBottomOf="@id/ti_confirm_password_register"
        app:layout_constraintStart_toStartOf="@id/ti_username_register"
        app:layout_constraintEnd_toEndOf="@id/ti_username_register"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorTertiary"
        app:layout_constraintBottom_toTopOf="@id/tv_login_left"/>

    <TextView
        android:id="@+id/tv_login_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/do_you_already_have_an_account"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_login_right"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/ti_username_register" />

    <TextView
        android:id="@+id/tv_login_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_left"
        app:layout_constraintEnd_toEndOf="@id/ti_username_register"
        app:layout_constraintStart_toEndOf="@id/tv_login_left" />

</androidx.constraintlayout.widget.ConstraintLayout>